--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script defer type="text/javascript" src="index.js"></script>
   </head>
 <html>
-    <body>
+    <body id="images">
         <h1>SHOEGAME</h1>
     </body>
 </html>
