--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
 <html>
     <body id="images">
-        
         <h1>SHOEGAME</h1>
+        <div id="image-container">
+<img src="///" title="image title goes here"/>
+        </div>
     </body>
 </html>
