--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <html>
     <body id="images">
         <h1>SHOEGAME</h1>
-        <div id="image-container">
+        <div id="container">
 <img src="///" title="image title goes here"/>
         </div>
     </body>
