--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <body id="images">
         <h1>SHOEGAME</h1>
         <div id="container">
-<img src="///" title="image title goes here"/>
+          <h2 id="card-title"></h2>
+<img src="" id="card-image" title="image title goes here"/> br
+<div class="likes-section">
+  <span id="like-count"></span>
+  <button id="like-button">♥</button>
+</div>
         </div>
     </body>
 </html>
