--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>SHOEGAME</h1>
         <div id="container">
           <h2 id="card-title"></h2>
-<img src="" id="card-image" title="image title goes here"/> br
+<img src="" id="card-image" class="card" title="image title goes here"/> br
 <div class="likes-section">
   <span id="like-count"></span>
   <button id="like-button">♥</button>
