--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   </head>
 <html>
     <body id="images">
-        <h1>SHOEGAME</h1>
+        <h1>SHOE GAME</h1>
         <div id="container">
-          <h2 id="card-title"></h2>
-<img src="" id="card-image" class="card" title="image title goes here"/> br
+          
+<img src="" id="card-image" class="card" title="image title goes here"/> <br>
+<h2 id="image-name"></h2>
 <div class="likes-section">
-  <span id="like-count"></span>
-  <button id="like-button">♥</button>
+  <span id="like-count" class="like"></span>
+  <button id="like-button" class="like-button">♥</button>
 </div>
         </div>
     </body>
