--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
   <button id="like-button" class="like-button">♥</button>
 </div>
         </div>
+        <div class="content">
+<form class="comment" id="myForm">
+<label for="comment">Comment</label>
+<input type="text" name="comment" id="comment">
+<button type="submit">POST</button>
+</form>
+        </div>
     </body>
 </html>
