--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>SHOE GAME</h1>
         <div id="container">
           
-<img src="" id="card-image" class="card" title="image title goes here"/> <br>
+<img src="" id="card-image" class="card" title="image  goes here"/> <br>
 <h2 id="image-name"></h2>
 <div class="likes-section">
   <span id="like-count" class="like"></span>
@@ -23,6 +23,20 @@
 <label for="comment">Comment</label>
 <input type="text" name="comment" id="comment">
 <button type="submit">POST</button>
+</form>
+
+
+
+<ul id="comments" class="comments">
+</ul>
+<form id="myform" class="form">
+  <input
+    class="input"
+    type="text"
+    name="comment"
+    id="comment"
+  />
+  <button class="comment-button" type="submit">POST</button>
 </form>
         </div>
     </body>
