added a DOMContentLoaded eventlistener

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>SHOE GAME</title>
+    <title>SHOEGAME</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script defer type="text/javascript" src="index.js"></script>
   </head>
@@ -11,20 +11,18 @@
         <h1>SHOE GAME</h1>
         <div id="container">
           
-<img src="" id="card-image" class="card" title="image  goes here"/> <br>
+<img src="" id="card-image" class="card" title="image title goes here"/> <br>
 <h2 id="image-name"></h2>
 <div class="likes-section">
   <span id="like-count" class="like"></span>
   <button id="like-button" class="like-button">♥</button>
 </div>
-        </div>
-        <div class="content">
 
 
-
-<ul id="comments" class="comments">
+<div class="comment-section">
+<ul id="comments">
 </ul>
-<form id="myform" class="form">
+<form id="comment-form" class="myForm">
   <input
     class="input"
     type="text"
@@ -33,6 +31,7 @@
   />
   <button class="comment-button" type="submit">POST</button>
 </form>
+</div>
         </div>
     </body>
 </html>
