added a new form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <div class="likes-section">
   <span id="like-count" class="like"></span>
   <button id="like-button" class="like-button">♥</button>
+
+  <form class="myForm">
+    <button type="submit">COMMENT</button>
+  </form>
 </div>
         </div>
     </body>
